# extendable_vm

./: .gitignore  Cargo.toml  LICENSE  README.md  bytecode.md
.github/workflows/: build-test.yml  release.yml
examples/: 2_times_10.bytecode
src/: byte_readable.rs  chunk.rs  chunk_parser.rs  code.rs  exception.rs  instruction.rs  instruction_table.rs  jexobject.rs  jexvalues.rs  lib.rs  main.rs  stack.rs  string_interner.rs  vm.rs
src/bytecode/: bytecode_reader.rs  chunk.rs  chunk_parser.rs  instructions.rs  mod.rs
src/exceptions/: runtime_exceptions.rs  syntax_exceptions.rs
src/jex/: bytecode_constants.rs  bytecode_parser.rs  bytecode_reader.rs  constant_parsers.rs  instructions.rs  mod.rs  operators.rs  runtime_exceptions.rs  syntax_exceptions.rs  values.rs
src/jex/instructions/: arithmetic.rs  comparison.rs  jumps.rs  literal.rs  logic.rs  mod.rs  op_codes.rs  operators.rs  side_effects.rs  variable.rs
src/machine/: byte_readable.rs  call_frame.rs  code.rs  errors.rs  instruction.rs  instruction_pointer.rs  instruction_table.rs  machine.rs  mod.rs  stack.rs
src/parsing/: code_parser.rs  constant_parser.rs  exceptions.rs  mod.rs  parsing_exceptions.rs  raw_bytes.rs
src/runtime/: call_frame.rs  exceptions.rs  instruction_pointer.rs  machine.rs  mod.rs  stack.rs  stack_errors.rs  vm.rs  vm_reader.rs
src/values/: jex_object.rs  jex_values.rs  mod.rs
tests/: test_stack.rs  vm_test_bool.rs  vm_test_calls_returns.rs  vm_test_globals.rs  vm_test_int.rs  vm_test_jumps.rs  vm_test_locals.rs  vm_test_null.rs  vm_test_string.rs
tests/run/: code.rs  mod.rs
(+12 files in other folders)
