[package]
name = "extendable_vm"
description = "Library that simplifies implementation of stack VMs"
license = "MIT"
license-file = "LICENSE"
version = "0.1.1-releaseAttempt"
authors = ["furetur <furetur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
scanrs = "0.2.1"
pretty_env_logger = "0.4.0"
log = "0.4"
