[package]
name = "extendable_vm"
description = "Library that simplifies implementation of stack VMs"
license-file = "LICENSE"
version = "0.1.1-releaseAttempt3"
authors = ["furetur <furetur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4.0"
log = "0.4"
